feat: Add password validator, update DTO request schema and login response (#33)
Change Made:

* feat: Add password confirmation validator
- `PasswordMatches.java`: annotation for matching password fields
- `PasswordMatchesValidator.java`: Implement vaildation logic for `@PasswordMatches `
- `RegisterRequest.java`: Apply @PasswordMatches` to validator password and confirmpasword

* chore: Update user login response and register schema
- `UserController.java`: Update POST `users/login` to return full user object
- `api-spec`: Add confirmpassword field to RegisterRequest schema
